--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+		<link rel="icon" href="../res/icons/technical-support-icon.ico" />
 		<link rel="stylesheet" type="text/css" href="../css/login.css">
 	</head>
 	
-	<div class="company_logo">Dashboard</div>
+	<div class="company_logo">FRI Tech Support</div>
 
 	<form action="dashboard.html">
 		<div class="login-block">
