--- a/html/help.html
+++ b/html/help.html
@@ -11,8 +11,7 @@
 
 	<body>
 
-	    <div id="wrapper">
-
+		<div id="wrapper">
 	    	<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
 			  	<div class="container-fluid">
 			    	<div class="navbar-header">
@@ -158,114 +157,18 @@
 	        </nav>
        	</div> <!-- /#wrapper -->
 
-	    <div id="page-wrapper">
-	    	<h1 class="page-header">Dashboard</h1>
-	    	<div class="panel panel-primary panel-news">
-				<div class="panel-heading">
-					<span class="glyphicon glyphicon-bell"></span>
-					<label class="iconLabel">News</label>
-				</div>
-				<div class="panel-body">
-					Urgent meeting will be held today at 4pm regarding the China powerplant in conference room "CSS" so scrum is postponed until further notice. Be prepared and focused!
-				</div>
-			</div>
-
-			<div class="panel panel-info panel-tickets">
-				<div class="panel-heading">
-					<span class="glyphicon glyphicon-tag"></span>
-					<label class="iconLabel">My Recent Tickets</label>
-				</div>
-				<div class="panel-body">
-					<div class="well well-sm well-ticket">
-						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#3</a>
-							</span>
-							<span class="ticket-title">DropDownMenu bug</span>
-							<span class="ticket-category">2nd level support</span>
-							<div class="ticket-rightside">
-								<span class="ticket-status-closed">Closed</span>
-								<span>(22.11.2015)</span>
-								<span class='ticket-assignedTo'>
-									<a href="#" data-toggle="modal" data-target="#richardsmith">
-										<!-- Modal -->
-										<div class="modal fade" id="richardsmith" role="dialog">
-											<div class="modal-dialog modal-sm">
-											  <div class="modal-content">
-											    <div class="modal-body">
-											      <p style="float: left;">
-											      	<img src="../res/avatar/vangogh_avatar.jpg" alt="avatar" style="
-											      	  width:60px;height:75px;">
-											      </p>
-											      <p style="float: right;">
-											          Position: Software developer
-											      	 <br>Age: 32
-											      	 <br>Status: Experienced<br>
-											      </p>
-											    </div>
-											  </div>
-											</div>
-										</div>
-										@Richard Smith
-									</a>
-								</span>
-							</div>
-						</div>
-					</div>
-					<div class="well well-sm well-ticket">
-						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#2</a>
-							</span>
-							<span class="ticket-title">Server localhost error</span>
-							<span class="ticket-category">1st level support</span>
-							<div class="ticket-rightside">
-								<span class="ticket-status-opened">Opened</span>
-								<span>(22.11.2015)</span>
-								<span class='ticket-assignedTo'>@Me</span>
-							</div>
-						</div>
-					</div>
-					<div class="well well-sm well-ticket">
-						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#5</a>
-							</span>
-							<span class="ticket-title">Font size</span>
-							<span class="ticket-category">2nd level support</span>
-							<div class="ticket-rightside">
-								<span class="ticket-status-reopened">Reopened</span>
-								<span>(22.11.2015)</span>
-								<span class='ticket-assignedTo'>@Nobody</span>
-							</div>
-						</div>
-					</div>
-					<div class="well well-sm well-ticket">
-						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#9</a>
-							</span>
-							<span class="ticket-title">Wrong build</span>
-							<span class="ticket-category">1st level support</span>
-							<div class="ticket-rightside">
-								<span class="ticket-status-pending">Pending</span>
-								<span>(22.11.2015)</span>
-								<span class='ticket-assignedTo'>@Me</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="progress">
-  				<div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%"> 25% Closed Tickets </div>
-			</div>
-
-	    </div> <!-- /#page-wrapper -->
-
-
+       	<div id="page-wrapper">
+	    	<h1 class="page-header">Help</h1>
+	    	<h2>FAQ<h2>
+	    	<p class="faq">
+	    	   Q: What is a ticket?<br>
+	    	   A: When a client is having a problem with the software we provide it's our obligation to solve their problem. Client creates a ticket where he/she fills out a form to describe an issue at hand.<br><br>
+	    	   Q: How can I make a new ticket?<br>
+	    	   A: On the left in the sidebar you have to click "Tickets" > "New Ticket", then fill out the proper form.<br><br>
+	    	   Q: How can I edit the ticket?<br>
+	    	   A: Under the "dashboard" or "My Ticket History" you can click on the ticket number (ex. #123), that will take you to the editing section, where you can correct/add information, change ticket status(Opened, Reopened, Closed or Pending) and choose assignee/support level.
+	    	</p>
+	    </div>
 	</body>
-	
-
 
 </html>
