--- a/html/ticketHistory.html
+++ b/html/ticketHistory.html
@@ -159,33 +159,24 @@
        	</div> <!-- /#wrapper -->
 
 	    <div id="page-wrapper">
-	    	<h1 class="page-header">Dashboard</h1>
-	    	<div class="panel panel-primary panel-news">
-				<div class="panel-heading">
-					<span class="glyphicon glyphicon-bell"></span>
-					<label class="iconLabel">News</label>
-				</div>
-				<div class="panel-body">
-					Urgent meeting will be held today at 4pm regarding the China powerplant in conference room "CSS" so scrum is postponed until further notice. Be prepared and focused!
-				</div>
-			</div>
-
+	    	<h1 class="page-header">My Ticket History</h1>
+	    
 			<div class="panel panel-info panel-tickets">
 				<div class="panel-heading">
 					<span class="glyphicon glyphicon-tag"></span>
-					<label class="iconLabel">My Recent Tickets</label>
+					<label class="iconLabel">Tickets</label>
 				</div>
 				<div class="panel-body">
 					<div class="well well-sm well-ticket">
 						<div>
 							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#3</a>
+								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#1</a>
 							</span>
-							<span class="ticket-title">DropDownMenu bug</span>
+							<span class="ticket-title">Text align</span>
 							<span class="ticket-category">2nd level support</span>
 							<div class="ticket-rightside">
 								<span class="ticket-status-closed">Closed</span>
-								<span>(22.11.2015)</span>
+								<span>(3.11.2015)</span>
 								<span class='ticket-assignedTo'>
 									<a href="#" data-toggle="modal" data-target="#richardsmith">
 										<!-- Modal -->
@@ -215,13 +206,13 @@
 					<div class="well well-sm well-ticket">
 						<div>
 							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#2</a>
+								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#7</a>
 							</span>
 							<span class="ticket-title">Server localhost error</span>
 							<span class="ticket-category">1st level support</span>
 							<div class="ticket-rightside">
-								<span class="ticket-status-opened">Opened</span>
-								<span>(22.11.2015)</span>
+								<span class="ticket-status-closed">Closed</span>
+								<span>(4.11.2015)</span>
 								<span class='ticket-assignedTo'>@Me</span>
 							</div>
 						</div>
@@ -229,43 +220,36 @@
 					<div class="well well-sm well-ticket">
 						<div>
 							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#5</a>
+								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#8</a>
 							</span>
-							<span class="ticket-title">Font size</span>
-							<span class="ticket-category">2nd level support</span>
+							<span class="ticket-title">Button colors</span>
+							<span class="ticket-category">1st level support</span>
 							<div class="ticket-rightside">
-								<span class="ticket-status-reopened">Reopened</span>
-								<span>(22.11.2015)</span>
-								<span class='ticket-assignedTo'>@Nobody</span>
+								<span class="ticket-status-closed">Closed</span>
+								<span>(5.11.2015)</span>
+								<span class='ticket-assignedTo'>@Me</span>
 							</div>
 						</div>
 					</div>
 					<div class="well well-sm well-ticket">
 						<div>
 							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#9</a>
+								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#10</a>
 							</span>
-							<span class="ticket-title">Wrong build</span>
+							<span class="ticket-title">Navbar issue</span>
 							<span class="ticket-category">1st level support</span>
 							<div class="ticket-rightside">
-								<span class="ticket-status-pending">Pending</span>
-								<span>(22.11.2015)</span>
+								<span class="ticket-status-closed">Closed</span>
+								<span>(6.11.2015)</span>
 								<span class='ticket-assignedTo'>@Me</span>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-			<div class="progress">
-  				<div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%"> 25% Closed Tickets </div>
-			</div>
-
 	    </div> <!-- /#page-wrapper -->
 
 
 	</body>
-	
-
 
 </html>
