--- a/html/help.html
+++ b/html/help.html
@@ -75,7 +75,7 @@
 		                    </ul>
 		                </li><!--messages-->
 			        	<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown tooltip" title="Hello Staš Hvala!" href="#">
+							<a class="dropdown-toggle" data-toggle="dropdown" title="Hello Staš Hvala!" href="#">
                         		<div class="navbar-icons">
                         			<span class="glyphicon glyphicon-user"></span>
                     			</div>
@@ -89,7 +89,7 @@
 		                        </li>
 		                        <li class="divider"></li>
 		                        <li>
-		                        	<a href="index.html">
+		                        	<a href="../index.html">
 		                        		<span class="glyphicon glyphicon-log-out"></span>
 		                        		<label class="iconLabel">Logout</label>
 		                        	</a>
@@ -159,15 +159,23 @@
 
        	<div id="page-wrapper">
 	    	<h1 class="page-header">Help</h1>
-	    	<h2>FAQ<h2>
-	    	<p class="faq">
-	    	   Q: What is a ticket?<br>
-	    	   A: When a client is having a problem with the software we provide it's our obligation to solve their problem. Client creates a ticket where he/she fills out a form to describe an issue at hand.<br><br>
-	    	   Q: How can I make a new ticket?<br>
-	    	   A: On the left in the sidebar you have to click "Tickets" > "New Ticket", then fill out the proper form.<br><br>
-	    	   Q: How can I edit the ticket?<br>
-	    	   A: Under the "dashboard" or "My Ticket History" you can click on the ticket number (ex. #123), that will take you to the editing section, where you can correct/add information, change ticket status(Opened, Reopened, Closed or Pending) and choose assignee/support level.
-	    	</p>
+	    
+			<div class="panel panel-info panel-tickets">
+				<div class="panel-heading">
+					<span class="glyphicon glyphicon-question-sign"></span>
+					<label class="iconLabel">FAQ</label>
+				</div>
+				<div class="panel-body">
+			    	<p>
+			    	   <b>Q</b>: What is a ticket?<br>
+			    	   <b>A</b>: When a client is having a problem with the software we provide it's our obligation to solve their problem. Client creates a ticket where he/she fills out a form to describe an issue at hand.<br><br>
+			    	   <b>Q</b>: How can I make a new ticket?<br>
+			    	   <b>A</b>: On the left in the sidebar you have to click "Tickets" > "New Ticket", then fill out the proper form.<br><br>
+			    	   <b>Q</b>: How can I edit the ticket?<br>
+			    	   <b>A</b>: Under the "dashboard" or "My Ticket History" you can click on the ticket number (ex. #123), that will take you to the editing section, where you can correct/add information, change ticket status(Opened, Reopened, Closed or Pending) and choose assignee/support level.
+			    	</p>
+			    </div>   	
+			</div>
 	    </div>
 	</body>
 
