--- a/html/ticketHistory.html
+++ b/html/ticketHistory.html
@@ -76,7 +76,7 @@
 		                    </ul>
 		                </li><!--messages-->
 			        	<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown tooltip" title="Hello Staš Hvala!" href="#">
+							<a class="dropdown-toggle" data-toggle="dropdown" title="Hello Staš Hvala!" href="#">
                         		<div class="navbar-icons">
                         			<span class="glyphicon glyphicon-user"></span>
                     			</div>
@@ -90,7 +90,7 @@
 		                        </li>
 		                        <li class="divider"></li>
 		                        <li>
-		                        	<a href="index.html">
+		                        	<a href="../index.html">
 		                        		<span class="glyphicon glyphicon-log-out"></span>
 		                        		<label class="iconLabel">Logout</label>
 		                        	</a>
@@ -169,11 +169,13 @@
 				<div class="panel-body">
 					<div class="well well-sm well-ticket">
 						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#1</a>
-							</span>
-							<span class="ticket-title">Text align</span>
-							<span class="ticket-category">2nd level support</span>
+							<div class="ticket-leftside">
+								<span class="ticket-number">
+									<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#1</a>
+								</span>
+								<span class="ticket-title">Text align</span>
+								<span class="ticket-category">2nd level support</span>
+							</div>
 							<div class="ticket-rightside">
 								<span class="ticket-status-closed">Closed</span>
 								<span>(3.11.2015)</span>
@@ -205,11 +207,13 @@
 					</div>
 					<div class="well well-sm well-ticket">
 						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#7</a>
-							</span>
-							<span class="ticket-title">Server localhost error</span>
-							<span class="ticket-category">1st level support</span>
+							<div class="ticket-leftside">
+								<span class="ticket-number">
+									<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#7</a>
+								</span>
+								<span class="ticket-title">Sidebar resizing</span>
+								<span class="ticket-category">1st level support</span>
+							</div>
 							<div class="ticket-rightside">
 								<span class="ticket-status-closed">Closed</span>
 								<span>(4.11.2015)</span>
@@ -219,11 +223,13 @@
 					</div>
 					<div class="well well-sm well-ticket">
 						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#8</a>
-							</span>
-							<span class="ticket-title">Button colors</span>
-							<span class="ticket-category">1st level support</span>
+							<div class="ticket-leftside">
+								<span class="ticket-number">
+									<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#8</a>
+								</span>
+								<span class="ticket-title">Button colors</span>
+								<span class="ticket-category">1st level support</span>
+							</div>
 							<div class="ticket-rightside">
 								<span class="ticket-status-closed">Closed</span>
 								<span>(5.11.2015)</span>
@@ -233,11 +239,13 @@
 					</div>
 					<div class="well well-sm well-ticket">
 						<div>
-							<span class="ticket-number">
-								<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#10</a>
-							</span>
-							<span class="ticket-title">Navbar issue</span>
-							<span class="ticket-category">1st level support</span>
+							<div class="ticket-leftside">
+								<span class="ticket-number">
+									<a href="ticketInfo.html" data-toggle="tooltip" title="Click for more details">#10</a>
+								</span>
+								<span class="ticket-title">Navbar issue</span>
+								<span class="ticket-category">1st level support</span>
+							</div>
 							<div class="ticket-rightside">
 								<span class="ticket-status-closed">Closed</span>
 								<span>(6.11.2015)</span>
