--- a/html/newTicket.html
+++ b/html/newTicket.html
@@ -75,7 +75,7 @@
 		                    </ul>
 		                </li><!--messages-->
 			        	<li class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown tooltip" title="Hello Staš Hvala!" href="#">
+							<a class="dropdown-toggle" data-toggle="dropdown" title="Hello Staš Hvala!" href="#">
                         		<div class="navbar-icons">
                         			<span class="glyphicon glyphicon-user"></span>
                     			</div>
@@ -89,7 +89,7 @@
 		                        </li>
 		                        <li class="divider"></li>
 		                        <li>
-		                        	<a href="index.html">
+		                        	<a href="../index.html">
 		                        		<span class="glyphicon glyphicon-log-out"></span>
 		                        		<label class="iconLabel">Logout</label>
 		                        	</a>
@@ -166,20 +166,20 @@
 					<label class="iconLabel">New ticket</label>
 				</div>
 				<div class="panel-body">
-					<div class="container">
+					<div class="">
 					  	<form role="form">
 						    <div class="form-group">
+						    	<label for="clientID">Client ID:</label>
 						    	<input type="number" class="form-control" id="clientID" placeholder="Enter client indetification number">
 						    </div>
 						    <div class="form-group">
-						      	<label for="pwd">Password:</label>
-						      	<input type="password" class="form-control" id="pwd" placeholder="Enter password">
-						    </div>
-						    <div class="form-group">
+						    	<label for="issueTitle">Issue Title:</label>
 						    	<input type="text" class="form-control" id="IssueTitle" placeholder="Address your issue">
 						    </div>
 						    <div class="form-group">
-						    	<input type="text" class="form-control" id="IssueTitle" placeholder="Carefully desribe your issue">
+						    	<label for="IssueDescription">Issue description:</label>
+						    	<textarea rows="10" type="text" class="form-control" 
+						    	id="IssueDescription" placeholder="Carefully desribe your issue"></textarea>
 						    </div>
 						    <button style="float: right" type="submit" class="btn btn-primary">Submit Ticket</button>
 					  	</form>
